[package]
name = "jwt-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
env_logger = "0.9"
dotenv = "0.15"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"